# mkw

./: .clang-format  .clangd  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  Doxyfile  HACK.md  Makefile  README.md  build.py  clang_check.py  configure.py  diff.py  diff_settings.py  doxygen_dark.css  expected.py  glossary.md  link.lcf  o_files.txt  percent_decompiled.py  pyproject.toml  rel_link.lcf  rel_o_files.txt  requirements.txt  setup.py  sources.py  structure.md  tools.7z.age
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
artifacts/: Makefile
asm/: Makefile  bss_802a4080.s  bss_80384348.s  bss_80384b6c.s  bss_80384bf4.s  bss_809bd6e0.s  ctors_80244de0.s  ctors_80244e8c.s  data_80258580.s  data_80275758.s  data_8027e772.s  data_802a268c.s  data_802a2b54.s  data_802a30bc.s  data_802a30ec.s  data_802a3f90.s  data_808b2bd0.s  dol_sections.s  dtors_80244ea4.s  extab_80006460.s  extabindex_80006a20.s  init_80004000.s  macros.inc  ppc_eabi_exception_handlers.s  rodata_80244ec0.s  rodata_80257747.s  sbss2_80389140.s  sbss_80385fc0.s  sbss_803862b0.s  sbss_80386d84.s  sbss_80386ec0.s  sbss_80386f90.s  sdata2_80386fa0.s  sdata2_80388d80.s  sdata2_80389104.s  sdata_80384c00.s  sdata_803857f6.s  text_800ccc80.s  text_8021a1b8.s  text_80229780.s  (+6 more)
codes/: ColoredMinimap.md
ghidra/: ExportFunctionInfoScriptToSymbolsTxt.sh  ImportSymbolsTxt.py
pack/: rel.lcf  (+12 more)
tools/relsplit/: CMakeLists.txt
tools/relsplit/source/: RelFile.hpp  main.cpp  types.hpp
tools/relsplit/source/low/: LowRel.cpp  LowRel.hpp
(+1871 files in other folders)
